--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,6 +5,7 @@
 /*
 #001D34
 #2FA3F7
+#primary-dark: #111129
 */
 @layer base {
   :root {
@@ -35,6 +36,7 @@
 
     /* Primary colors - main action elements */
     --primary: 239, 43%, 25%; /* Deep purple (#3C0366) */
+    --primary-dark: 240, 41%, 11%;
     --primary-foreground: 210 40% 98%; /* Light text on dark background */
 
     /* Secondary colors - less important elements */
@@ -69,6 +71,9 @@
 
     /* Font family */
     --font-fredoka: "Fredoka", sans-serif;
+
+    /*shadows*/
+    --dropdown-shadow-primary: 0px 0px 3px rgba(32, 32, 32, 0.75);
   }
 
   .dark {
@@ -140,6 +145,25 @@ body {
   gap: 2rem;
 }
 
+.primary-shadow {
+  box-shadow:
+    0 3px 6px rgba(0, 0, 0, 0.16),
+    0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+.secondary-shadow {
+  box-shadow:
+    0 1px 3px rgba(0, 0, 0, 0.12),
+    0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+.profile-img {
+  filter: drop-shadow(var(--dropdown-shadow-primary));
+}
+
+.profile-info-card {
+  place-self: end start;
+}
 /* Slides are same, but it's easier to keep them separate for future modifications */
 .first-slide {
   & > :first-child {
