--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -74,6 +74,10 @@
 
     /*shadows*/
     --dropdown-shadow-primary: 0px 0px 3px rgba(32, 32, 32, 0.75);
+    --dropdown-shadow-light: 0px 0px 2px rgba(58, 58, 58, 0.336);
+
+    /*transition*/
+    --transition: 0.3s;
   }
 
   .dark {
@@ -157,6 +161,10 @@ body {
     0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
+.bottom-shadow {
+  box-shadow: 0px 13px 22px -19px rgba(0, 0, 0, 0.45);
+}
+
 .profile-img {
   filter: drop-shadow(var(--dropdown-shadow-primary));
 }
@@ -195,7 +203,7 @@ body {
 .pick-character {
   filter: brightness(50%);
   cursor: pointer;
-  transition: 0.3s;
+  transition: var(--transition);
   &:hover {
     filter: brightness(100%);
     scale: 1.05;
@@ -204,7 +212,7 @@ body {
 
 .pick-pokemon {
   cursor: pointer;
-  transition: 0.3s;
+  transition: var(--transition);
   filter: brightness(50%) blur(2px);
   z-index: 2;
 }
@@ -248,7 +256,7 @@ body {
 
 .toast {
   translate: 0 0;
-  transition: 0.3s;
+  transition: var(--transition);
   opacity: 1;
   @starting-style {
     translate: 0 5rem;
@@ -257,9 +265,55 @@ body {
 }
 
 .toast-leave {
-  animation: leave 0.3s linear;
+  animation: leave var(--transition) linear;
 }
 
+/*footer*/
+
+.about-day {
+  --about-day-position: -2rem 0;
+  display: grid;
+  gap: 1rem;
+  animation: go-in var(--transition) linear;
+  translate: var(--about-day-position);
+
+  &.deactive {
+    animation: go-out var(--transition) linear;
+  }
+}
+
+@keyframes go-in {
+  from {
+    translate: -2rem 5rem;
+    opacity: 0;
+  }
+  to {
+    translate: var(--about-day-position);
+    opacity: 1;
+  }
+}
+
+@keyframes go-out {
+  from {
+    translate: var(--about-day-position);
+    opacity: 1;
+  }
+  to {
+    translate: -2rem 5rem;
+    opacity: 0;
+  }
+}
+
+.hourglass {
+  filter: drop-shadow(var(--dropdown-shadow-light)) grayscale(0.9);
+  transition: var(--transition);
+  &:hover {
+    rotate: 30deg;
+  }
+  &.is-active {
+    filter: drop-shadow(var(--dropdown-shadow-light)) grayscale(0);
+  }
+}
 @keyframes leave {
   from {
     translate: 0 0;
@@ -274,7 +328,7 @@ body {
 .progress-bar {
   position: absolute;
   height: 2px;
-  transition: 0.3s linear;
+  transition: var(--transition) linear;
 }
 
 .left-border {
@@ -310,7 +364,7 @@ body:has(.no-nav) {
 }
 
 .slide-left-to-right {
-  animation: slide-left-to-right 0.3s ease-in-out;
+  animation: slide-left-to-right var(--transition) ease-in-out;
 }
 
 @keyframes slide-left-to-right {
