--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -113,6 +113,25 @@
     --foreground: #ededed;
   }
 }*/
+html {
+  scrollbar-gutter: stable;
+}
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.144);
+}
+
+::-webkit-scrollbar-thumb {
+  background: #333;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
 
 body {
   color: hsl(var(--foreground));
@@ -149,6 +168,10 @@ body {
 
 .bottom-shadow {
   box-shadow: 0px 13px 22px -19px rgba(0, 0, 0, 0.45);
+}
+
+.max-z {
+  z-index: 10;
 }
 
 .profile-img {
