feat(searchbar): set styles for searchbar + features

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -138,6 +138,12 @@ html {
   background: #555;
 }
 
+.custom-scroll {
+  overflow-y: auto;
+  scrollbar-width: 6px;
+  scrollbar-color: #333 #0a0a0a;
+}
+
 body {
   color: hsl(var(--foreground));
   background: var(--background);
