--- a/src/styles/battle-styles.css
+++ b/src/styles/battle-styles.css
@@ -212,3 +212,15 @@
 .exp-bar {
   width: 90%;
 }
+
+.new-level-box {
+  display: grid;
+  grid-template-columns: 3rem minmax(0, 1fr);
+  align-items: center;
+}
+
+.new-stats {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  align-items: center;
+}
