--- a/src/styles/secondary-header-styles.css
+++ b/src/styles/secondary-header-styles.css
@@ -29,16 +29,22 @@
   transition:
     opacity var(--transition),
     display var(--transition),
+    translate var(--transition),
     overlay var(--transition);
   transition-behavior: allow-discrete;
   width: 30rem;
-  height: 20rem;
+  height: 25rem;
+  translate: 0 -2rem;
   &.open {
     opacity: 1;
     display: grid;
-
+    height: 25rem;
+    max-height: 25rem;
+    overflow: hidden;
+    translate: 0 0;
     @starting-style {
       opacity: 0;
+      translate: 0 -2rem;
     }
   }
 }
@@ -50,6 +56,8 @@
   grid-template:
     "header header" min-content
     "inventory-categories inventory-items" 1fr / 1fr 3fr;
+  height: 25rem;
+  width: 30rem;
 }
 
 .inventory header {
@@ -61,16 +69,44 @@
 .inventory-categories {
   grid-area: inventory-categories;
   display: grid;
-  grid-template-rows: repeat(auto-fill, 2rem);
+  height: 100%;
 }
 
 .inventory-items {
   grid-area: inventory-items;
   display: grid;
   grid-template-rows: 2fr 1fr;
+  max-height: 100%;
+  overflow-y: auto;
 }
 
 .item-list {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
+  max-width: 100%;
+}
+
+.item-description {
+  display: flex;
+  min-height: 0; /* Důležité pro správný scroll v grid kontejneru */
+  overflow-y: auto;
+}
+
+.item-description p {
+  width: 100%;
+  max-height: 100%; /* Místo height použijeme max-height */
+  overflow-y: auto;
+}
+
+/*Scrollbar*/
+.inventory-scrollbar {
+  &::-webkit-scrollbar {
+    width: 0.25rem;
+    z-index: 100;
+    background-color: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: rgba(var(--content));
+  }
 }
