--- a/src/styles/secondary-header-styles.css
+++ b/src/styles/secondary-header-styles.css
@@ -2,6 +2,7 @@
   opacity: 0;
   display: none;
   position: absolute;
+  isolation: isolate;
   height: 0;
   transition:
     opacity var(--transition),
@@ -25,6 +26,7 @@
   opacity: 0;
   display: none;
   position: absolute;
+  isolation: isolate;
   inset: 110% 0 auto auto;
   transition:
     opacity var(--transition),
@@ -82,7 +84,7 @@
 
 .item-list {
   display: grid;
-  grid-template-columns: repeat(7, 1fr);
+  grid-template-columns: repeat(6, 1fr);
   max-width: 100%;
 }
 
