--- a/src/styles/battle-styles.css
+++ b/src/styles/battle-styles.css
@@ -45,45 +45,6 @@
   display: grid;
   grid-template-rows: minmax(0, 1fr) minmax(0, 1fr);
   overflow: hidden;
-  background:
-    linear-gradient(
-      45deg,
-      #0000 calc(25% / 3),
-      var(--pattern-color) 0 calc(50% / 3),
-      #0000 0 calc(250% / 3),
-      var(--pattern-color) 0 calc(275% / 3),
-      #0000 0
-    ),
-    linear-gradient(
-      45deg,
-      var(--pattern-color) calc(25% / 3),
-      #0000 0 calc(50% / 3),
-      var(--pattern-color) 0 25%,
-      #0000 0 75%,
-      var(--pattern-color) 0 calc(250% / 3),
-      #0000 0 calc(275% / 3),
-      var(--pattern-color) 0
-    ),
-    linear-gradient(
-      -45deg,
-      #0000 calc(25% / 3),
-      var(--pattern-color) 0 calc(50% / 3),
-      #0000 0 calc(250% / 3),
-      var(--pattern-color) 0 calc(275% / 3),
-      #0000 0
-    ),
-    linear-gradient(
-        -45deg,
-        var(--pattern-color) calc(25% / 3),
-        #0000 0 calc(50% / 3),
-        var(--pattern-color) 0 25%,
-        #0000 0 75%,
-        var(--pattern-color) 0 calc(250% / 3),
-        #0000 0 calc(275% / 3),
-        var(--pattern-color) 0
-      )
-      var(--pattern-color-secondary);
-  background-size: 20px 20px;
   background-position:
     0 0,
     10px 10px;
@@ -184,6 +145,7 @@
 .battle-menu-buttons {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
+  max-height: 100%;
 }
 
 .battle-pokemon-stats {
@@ -300,39 +262,42 @@
   }
 }
 
-/*
-.pokeball {
-  --resize-constant: 0.15;
-  display: grid;
-  position: absolute;
-  inset: auto 55% 1rem 45%;
-  width: calc(12rem * var(--resize-constant));
-  height: calc(12rem * var(--resize-constant));
-  background: radial-gradient(
-      white calc(16px * var(--resize-constant)),
-      black calc(17px * var(--resize-constant)) calc(18px * var(--resize-constant)),
-      white calc(19px * var(--resize-constant)) calc(24px * var(--resize-constant)),
-      black calc(25px * var(--resize-constant)) calc(32px * var(--resize-constant)),
-      transparent calc(33px * var(--resize-constant))
+/*background:
+    linear-gradient(
+      45deg,
+      #0000 calc(25% / 3),
+      var(--pattern-color) 0 calc(50% / 3),
+      #0000 0 calc(250% / 3),
+      var(--pattern-color) 0 calc(275% / 3),
+      #0000 0
     ),
     linear-gradient(
-      to bottom,
-      red 0 calc(80px * var(--resize-constant)),
-      black calc(81px * var(--resize-constant)) calc(97px * var(--resize-constant)),
-      white calc(97px * var(--resize-constant)) 100%
-    );
-  border: calc(8px * var(--resize-constant)) solid black;
-  box-shadow: inset calc(-16px * var(--resize-constant)) calc(-8px * var(--resize-constant)) 0 0
-    rgba(0, 0, 0, 0.2);
-  border-radius: 50%;
-  opacity: 0;
-  transition: var(--transition);
-  z-index: 2;
-  animation:
-    fall 0.5s ease-in-out 1s forwards,
-    shake 1.25s cubic-bezier(0.36, 0.07, 0.19, 0.97) 1.5s 3,
-    catch 0.5s ease-out 5.25s forwards;
-  &.catching {
-    opacity: 1;
-  }
-}*/
+      45deg,
+      var(--pattern-color) calc(25% / 3),
+      #0000 0 calc(50% / 3),
+      var(--pattern-color) 0 25%,
+      #0000 0 75%,
+      var(--pattern-color) 0 calc(250% / 3),
+      #0000 0 calc(275% / 3),
+      var(--pattern-color) 0
+    ),
+    linear-gradient(
+      -45deg,
+      #0000 calc(25% / 3),
+      var(--pattern-color) 0 calc(50% / 3),
+      #0000 0 calc(250% / 3),
+      var(--pattern-color) 0 calc(275% / 3),
+      #0000 0
+    ),
+    linear-gradient(
+        -45deg,
+        var(--pattern-color) calc(25% / 3),
+        #0000 0 calc(50% / 3),
+        var(--pattern-color) 0 25%,
+        #0000 0 75%,
+        var(--pattern-color) 0 calc(250% / 3),
+        #0000 0 calc(275% / 3),
+        var(--pattern-color) 0
+      )
+      var(--pattern-color-secondary);
+  background-size: 20px 20px;*/
